<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.saxsys</groupId>
    <artifactId>gestures-raspberry-fx</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
		<!-- TODO: Change to actual IP address of the Raspberry PI -->
        <pi.host>192.168.xx.xx</pi.host>
		<pi.ext.dir>-Djava.ext.dirs=/home/pi/armv6hf-sdk/rt/lib/ext</pi.ext.dir>
        <pi.deployPath>/home/pi/java/jar</pi.deployPath>
        <pi.user>pi</pi.user>
        <pi.password>raspberry</pi.password>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <name>Maven Plugin Repository</name>
            <url>http://repo1.maven.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <updatePolicy>never</updatePolicy>
            </releases>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <!-- Build jar -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>de.saxsys.sample.GesturesDemoApp</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <phase>install</phase>
                        <configuration>
                            <target>
								<!-- http://www.margic.com/2015/03/deploying-jar-to-raspberry-pi-using.html -->
                                <!-- create folder on pi -->
                                <sshexec command="mkdir -p ${pi.deployPath}" host="${pi.host}" password="${pi.password}" port="22" trust="true" username="${pi.user}" />
                                <!-- copy created jar into folder -->
                                <scp failonerror="true" todir="${pi.user}:${pi.password}@${pi.host}:${pi.deployPath}" trust="true">
                                    <fileset file="${project.basedir}/target/${project.artifactId}-${project.version}-jar-with-dependencies.jar" />
                                </scp>
                                <!-- run jar on pi -->
                                <sshexec command="sudo java ${pi.ext.dir} -jar ${pi.deployPath}/${project.artifactId}-${project.version}-jar-with-dependencies.jar" host="${pi.host}" password="${pi.password}" port="22" trust="true" username="${pi.user}" />
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.ant</groupId>
                        <artifactId>ant-jsch</artifactId>
                        <version>1.9.4</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

</project>
